--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=OrderDb;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-N09S035\\SQLEXPRESS;Database=OrderDb;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
