Completed the JWT process

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   "JwtSettings": {
     "Secret": "BuSifrelemeAnahtariniGercekUretimdeDegistir!_RastgeleBaytlarlaUretildiVeEnAz40KarakterUzunlugundaOlacak",
     "Issuer": "OrderManagementApi",  
-    "Audience": "OrderManagementUsers", 
+    "Audience": "OrderManagementApiClient", 
     "TokenExpirationMinutes": 60       
   },
   "AllowedHosts": "*"
